subclass for blog and official articles; comments UI function; new syphon plugin

--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,11 +1,11 @@
 .ui.three.column.divided.center.aligned.stackable.grid
   .ui.equal.height.row
     .column
-      p 联系方式：XXXXXX
+      p 联系方式：1234
       p 
         a 关于我们
       p 
-        a 备案号:xxxxx
+        a 备案号:1234
       p &copy; 2015 版权申明
     .column
       p
