--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -35,6 +35,7 @@ html(class="no-js")
   script(src="/templates/precompiled.handlebars.admin.js")
   script(src="/scripts/app.js")
   script(src="/scripts/hal/articles.js")
+  script(src="/scripts/hal/blog.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/category.js")
