--- a/dionysus-client/yo/templates/admin/courses/editor.jade
+++ b/dionysus-client/yo/templates/admin/courses/editor.jade
@@ -1,75 +1,81 @@
-form.ui.form
-  h3
-    a 基本信息
-    .ui.divider
-  .two.fields
-    .field
-      label 课程名称
-      input(name="title", type="text", placeholder="课程名称")
-    .field
-      label 课程内容
-      select(name="category").ui.dropdown
-        option(value="") 选择课程类别
-        {{#each categories}}
-        <option value="{{ id }}">{{ name }}</option>
-        {{/each}}
-  .two.fields
-    .field
-      label 课程状态
-      select(name="state").ui.dropdown
-        option(value="OPEN") 开放
-        option(value="IN_PROGRESS") 准备中
-        option(value="FINISHED") 已结束
-    .field
-      label 上课形式
-      select(name="approach").ui.dropdown
-        option(value="") 选择课程类别
-        option(value="ONE2ONE") 一对一在线辅导
-        option(value="ONE2MANY") 在线课堂
-        option(value="VIDEO") 在线视频
-        option(value="OFFLINE") 线下课程
-  .two.fields
-    .field
-      label 授课老师
-      select(name="consultant").ui.dropdown
-        option(value="") 选择讲师
-        {{#each consultants}}
-        <option value="{{id}}">{{username}}</option>
-        {{/each}}
-    .field.palceholder
-  h3
-    a 详细信息
-  .ui.divider
-  .two.fields
-    .field
-      label 上课时间
-      input(name="date", id= "courseTime", type="text", placeholder="时间")
-    .field
-      label 上课地点
-      input(name="address", type="text", placeholder="地址")
-  .two.fields
-    .field
-      label 人数限制
-      input(name="capacity", type="text", placeholder="人数")
-    .field
-      label 价格
-      input(name="price", type="text", placeholder="课程报价")
-  #videoPart.field
-    label 视频链接
-    input(name="videoLink", type="text", placeholder="视频链接")
-  #groupAddress.field
-    label QQ群地址
-    input(name="groupAddress", type="text", placeholder="QQ群地址")
+form.ui.form(style="padding-top:30px;")
+  .ui.grid
+    .twelve.wide.column
+      .ui.segment
+        h3
+          a 基本信息
+        .ui.divider
+        .two.fields
+          .field
+            label 课程名称
+            input(name="title", type="text", placeholder="课程名称")
+          .field
+            label 课程状态
+            select(name="state").ui.dropdown
+              option(value="OPEN") 开放
+              option(value="IN_PROGRESS") 准备中
+              option(value="FINISHED") 已结束
+        .two.fields
+          .field
+            label 上课形式
+            select(name="approach").ui.dropdown
+              option(value="") 选择课程类别
+              option(value="ONE2ONE") 一对一在线辅导
+              option(value="ONE2MANY") 在线课堂
+              option(value="VIDEO") 在线视频
+              option(value="OFFLINE") 线下课程
+          .field
+            label 授课老师
+            select(name="consultant").ui.dropdown
+              option(value="") 选择讲师
+              |{{#each consultants}}
+              <option value="{{ id }}">{{ username }}</option>
+              |{{/each}}
+        h3
+          a 详细信息
+        .ui.divider
+        .two.fields
+          .field
+            label 上课时间
+            input(name="date", id= "courseTime", type="text", placeholder="时间")
+          .field
+            label 上课地点
+            input(name="address", type="text", placeholder="地址")
+        .two.fields
+          .field
+            label 人数限制
+            input(name="capacity", type="text", placeholder="人数")
+          .field
+            label 价格
+            input(name="price", type="text", placeholder="课程报价")
+        #videoPart.field
+          label 视频链接
+          input(name="videoLink", type="text", placeholder="视频链接")
+        #groupAddress.field
+          label QQ群地址
+          input(name="groupAddress", type="text", placeholder="QQ群地址")
 
-  .field
-    label 课程简介
-    textarea(name="description")
-  .field
-    label 课程详细描述
-    textarea.editor(name="body")
-  .ui.button.primary.submit
-    i.save.icon
-    | 保存
-  .ui.red.button.delete
-    i.trash.icon
-    | 删除
+        .field
+          label 课程简介
+          textarea(name="description")
+        .field
+          label 课程详细描述
+          textarea.editor(name="body")
+        .ui.button.primary.submit
+          i.save.icon
+          | 保存
+        .ui.red.button.delete
+          i.trash.icon
+          | 删除
+    .four.wide.column
+      .ui.segment
+        h3
+          a 选择类别
+        .ui.divider
+        .field
+          ul.course-categories
+        h4
+          .addCat(style="padding-left:40px;")
+            a.ui.tiny.purple.button(href="/admin/courses/categories/create") 添加类别
+            a.ui.tiny.purple.button.category.edit 编辑类别
+
