add pagination for course list page

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -12,6 +12,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_style.css")
     link(rel="stylesheet", href="/bower_components/toastr/toastr.css")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
+    link(rel="stylesheet", href="/styles/pagination.css")
     link(rel="stylesheet", href="/styles/semantic.css")
     link(rel="stylesheet", href="/styles/main.css")
     // endbuild
