--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -25,9 +25,10 @@ script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
 script(src="/bower_components/backbone-relational/backbone-relational.js")
 script(src="/bower_components/uri-templates/uri-templates.js")
 script(src="/bower_components/backbone-relational-hal/backbone-relational-hal.js")
-script(src="/bower_components/toastr/toastr.js")  
+script(src="/bower_components/toastr/toastr.js")
 script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
 script(src="/bower_components/flexslider/jquery.flexslider.js")
+script(src="/bower_components/twbs-pagination/jquery.twbsPagination.js")
 
 // endbuild
 
