--- a/dionysus-client/yo/templates/admin/courses/courses.jade
+++ b/dionysus-client/yo/templates/admin/courses/courses.jade
@@ -1,4 +1,5 @@
-a.ui.button.edit.blue(href="/admin/courses/create")
+a.ui.button.edit.blue(href="/admin/courses/create",style="margin-left:40px;")
   i.add.icon
   | Create
 ul.ui.relaxed.items
+#paging
