--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -11,6 +11,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/bower_components/flexslider/flexslider.css")
+    link(rel="stylesheet", href="/styles/pagination.css")
     // endbuild
 
     title Dionysus
@@ -23,7 +24,7 @@ html(class="no-js")
   script(src="/templates/precompiled.handlebars.home.js")
   script(src="/scripts/app.js")
   script(src="/scripts/modules/commonUtils.js")
-  script(src="/scripts/modules/layoutviews.js")  
+  script(src="/scripts/modules/layoutviews.js")
   script(src="/scripts/hal/articles.js")
   script(src="/scripts/hal/psychtests.js")
   script(src="/scripts/common/entity.js")
@@ -45,12 +46,12 @@ html(class="no-js")
   script(src="/scripts/modules/consultant.js")
   script(src="/scripts/modules/test.js")
   script(src="/scripts/modules/appointment.js")
-  script(src="/scripts/modules/profile.js") 
+  script(src="/scripts/modules/profile.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course.js")
 
   // endbuild
-  
+
   script
     | Dionysus.start();
