add fullpage.js support to scroll whole screen

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -13,6 +13,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/toastr/toastr.css")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/styles/pagination.css")
+    link(rel="stylesheet", href="/styles/jquery.fullPage.css")
     link(rel="stylesheet", href="/styles/semantic.css")
     link(rel="stylesheet", href="/styles/main.css")
     // endbuild
