--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -29,6 +29,7 @@ script(src="/bower_components/toastr/toastr.js")
 script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
 script(src="/bower_components/flexslider/jquery.flexslider.js")
 script(src="/bower_components/twbs-pagination/jquery.twbsPagination.js")
+script(src="/bower_components/fullpage.js/jquery.fullPage.min.js")
 
 // endbuild
 
