--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -12,6 +12,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/bower_components/flexslider/flexslider.css")
     link(rel="stylesheet", href="/styles/pagination.css")
+    link(rel="stylesheet", href="/styles/jquery.fullPage.css")
     // endbuild
 
     title Dionysus
