add more button to editor

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -25,6 +25,15 @@ html(class="no-js")
   // build:js(.) /scripts/admin/froala_editor.js
   script(src="/bower_components/froala/js/froala_editor.min.js")
   script(src="/bower_components/froala/js/plugins/video.min.js")
+  script(src="/bower_components/froala/js/plugins/colors.min.js")
+  script(src="/bower_components/froala/js/plugins/font_family.min.js")
+  script(src="/bower_components/froala/js/plugins/font_size.min.js")
+  script(src="/bower_components/froala/js/plugins/block_styles.min.js")
+  script(src="/bower_components/froala/js/plugins/lists.min.js")
+  script(src="/bower_components/froala/js/plugins/tables.min.js")
+  script(src="/bower_components/froala/js/plugins/block_styles.min.js")
+  script(src="/bower_components/froala/js/plugins/inline_styles.min.js")
+  script(src="/bower_components/froala/js/plugins/urls.min.js")
   script(src="/bower_components/froala/js/plugins/file_upload.min.js")
   script(src="/scripts/froala_audio.js")
   // endbuild
