--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -52,12 +52,14 @@ html(class="no-js")
   script(src="/scripts/common/category.js")
   script(src="/scripts/common/course.js")
   script(src="/scripts/common/consultant.js")
+  script(src="/scripts/common/appointment.js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/article-management.js")
   script(src="/scripts/admin/category-management.js")
   script(src="/scripts/admin/course-management.js")
+  script(src="/scripts/admin/appointment-management.js")
   script(src="/scripts/admin/tests.js")
   script(src="/scripts/modules/commonUtils.js")
   // endbuild
