--- a/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
+++ b/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
@@ -1,12 +1,13 @@
-tr
-  td {{ user.username }}
-  td {{ consultant.username }}
-  td {{ date }}
-  td {{ approach }}
-  td {{ state }}
-  td
-    .ui.tiny.blue.button 接受
-    .ui.tiny.red.button 拒绝
-    .ui.tiny.green.button 完成
-    .ui.tiny.teal.button 取消
-
+td.user {{ user.username }}
+td.consultant {{ consultant.username }}
+td.date {{ date }}
+td.approach {{ approach }}
+td.state
+  select(name="state").ui.dropdown
+    option(value="WAITING")  等待中
+    option(value="ACCEPTED") 已接受
+    option(value="DECLINED") 已拒绝
+    option(value="FINISHED") 已完成
+td.save
+  .ui.tiny.green.button 保存
+  .ui.tiny.button 删除
