--- a/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
+++ b/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
@@ -9,5 +9,5 @@ td.state
     option(value="DECLINED") 已拒绝
     option(value="FINISHED") 已完成
 td.save
-  .ui.tiny.green.button 保存
-  .ui.tiny.button 删除
+  .ui.small.green.button 保存
+  .ui.small.button(style="margin-left:20px;") 删除
