data.sql fix build error. Can not insert '抑郁症'. Appointments management done.

--- a/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
+++ b/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
@@ -1,5 +1,5 @@
-td.user {{ user.username }}
 td.consultant {{ consultant.username }}
+td.user {{ user.username }}
 td.date {{ date }}
 td.approach {{ approach }}
 td.state
@@ -9,5 +9,5 @@ td.state
     option(value="DECLINED") 已拒绝
     option(value="FINISHED") 已完成
 td.save
-  .ui.small.green.button 保存
+  .ui.small.green.save.button 保存
   .ui.small.button(style="margin-left:20px;") 删除
