--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -5,6 +5,7 @@ script(src="/bower_components/underscore/underscore.js")
 script(src="/bower_components/backbone/backbone.js")
 script(src="/bower_components/backbone.babysitter/lib/backbone.babysitter.js")
 script(src="/bower_components/backbone.wreqr/lib/backbone.wreqr.js")
+script(src="/bower_components/backbone.paginator/lib/backbone.paginator.js")
 script(src="/bower_components/marionette/lib/core/backbone.marionette.js")
 script(src="/bower_components/marionette.backbone.syphon/lib/backbone.syphon.js")
 script(src="/bower_components/handlebars/handlebars.runtime.js")
