add psychtest evaluation methods

--- a/dionysus-client/yo/templates/home/psychtests/table.jade
+++ b/dionysus-client/yo/templates/home/psychtests/table.jade
@@ -2,7 +2,7 @@ h2.ui.dividing.header
   {{ title }}
   .sub.header {{ description }}
 form.ui.form.psychtest
-  table.ui.table.unstackable.collapsing
+  table.ui.striped.table.unstackable.collapsing
     thead
       tr
         th 问题
