fix bug on update profile

--- a/dionysus-client/yo/templates/home/profile/personal.jade
+++ b/dionysus-client/yo/templates/home/profile/personal.jade
@@ -45,7 +45,6 @@ form.ui.form
       input(type="text", name="address", value="{{ address }}", required)
       i.home.icon
   .ui.horizontal.divider
-.ui.actions
-  .ui.primary.button
+  .ui.left.icon.input
+    input.ui.submit.button(type="submit", value="保存")
     i.save.icon
-    | 保存
