--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -28,6 +28,7 @@ html(class="no-js")
   script(src="/scripts/modules/layoutviews.js")
   script(src="/scripts/hal/articles.js")
   script(src="/scripts/hal/psychtests.js")
+  script(src="/scripts/hal/psychtestresults.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/module.js")
