--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -43,6 +43,8 @@ html(class="no-js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
   script(src="/scripts/modules/article/articleHome.js")
+  script(src="/scripts/modules/article/articleList.js")
+  script(src="/scripts/modules/article/articleDetail.js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/modules/site.js")
   script(src="/scripts/modules/consultant.js")
