add consultant admin page

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -60,6 +60,7 @@ html(class="no-js")
   script(src="/scripts/admin/category-management.js")
   script(src="/scripts/admin/course-management.js")
   script(src="/scripts/admin/appointment-management.js")
+  script(src="/scripts/admin/consultant-management.js")
   script(src="/scripts/admin/tests.js")
   script(src="/scripts/modules/commonUtils.js")
   // endbuild
