include one%css and pure css package, bug fix of dafeng

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -13,6 +13,8 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/flexslider/flexslider.css")
     link(rel="stylesheet", href="/styles/pagination.css")
     link(rel="stylesheet", href="/styles/jquery.fullPage.css")
+    link(rel="stylesheet", href="/bower_components/pure/pure.css")
+    link(rel="stylesheet", href="/styles/onepcssgrid/onepcssgrid.css")
     // endbuild
 
     title Dionysus
