--- a/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
@@ -1,22 +1,36 @@
-.ui.center.aligned.page.grid
+.ui.centered.page.grid
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#slider
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#category
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#doc
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#video
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#blog
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#tag
 	.row
-		.sixteen.wide.moblie.twelve.wide.tablet.twelve.wide.computer.column
+		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
 			.ui.segment#latest
+.pure-g
+	.pure-u-1-3
+		.ui.button hehehe
+	.pure-u-1-3
+		p hahhaha
+	.pure-u-1-3
+		p xixixixi
+.pure-g
+	.pure-u-1-3
+		.ui.button hehehe
+	.pure-u-1-3
+		p hahhaha
+	.pure-u-1-3
+		p xixixixi
