course UI initial check in

--- a/dionysus-client/yo/templates/home/course/first.jade
+++ b/dionysus-client/yo/templates/home/course/first.jade
@@ -1,2 +1,15 @@
+.onepcssgrid-1200
+  .oneraw
+    .col12
+      #slider
+  .oneraw
+    .col12
+      #topCategory
+      #subCategory
+      #approach
+  #video.oneraw
+  .oneraw
+    #pagenation.col12
+
 
 
