--- a/dionysus-client/yo/templates/home/course/first.jade
+++ b/dionysus-client/yo/templates/home/course/first.jade
@@ -7,7 +7,8 @@
       #topCategory
       #subCategory
       #approach
-  #video.oneraw
+  .oneraw
+    #video.col12
   .oneraw
     #pagenation.col12
 
