--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -1,12 +1,30 @@
-.ui.inverted.purple.verticle.segment
-	.ui.centered.page.grid
-		.row
-			.column
-				.ui.segment heheheh
-		.row
-			.ui.menu
-				a.item hehehe
-				a.item xixix
-				a.item haha
-
+.pure-g
+	.pure-u-1-5
+		a.logo.pure-menu-heading
+			p LOGO
+	.pure-u-4-5.login-menu(align="right")
+		.pure-menu.pure-menu-horizontal
+			ul.pure-menu-list
+				li.pure-menu-item
+					a#login.pure-menu-link(href="#") 登录
+				li.pure-menu-item
+					a.pure-menu-link(href="/register") 注册
+				li.pure-menu-item
+					a.pure-menu-link(href="#") 关于我们
+.home-menu.pure-menu.pure-menu-horizontal
+	ul.pure-menu-list
+		li.pure-menu-item
+			a.pure-menu-link(href="/site") 首页
+		li.pure-menu-item
+			a.pure-menu-link(href="/articles") 心理知识
+		li.pure-menu-item
+			a.pure-menu-link(href="/consultants") 心理咨询
+		li.pure-menu-item
+			a.pure-menu-link(href="/courses") 心理课程
+		li.pure-menu-item
+			a.pure-menu-link(href="/psychtestsuites") 心理测试
+		li.pure-menu-item
+			a.pure-menu-link(href="#") 心理fm
+		li.pure-menu-item
+			a.pure-menu-link(href="#") 其他
 
