--- a/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
@@ -22,7 +22,20 @@
 			.ui.segment#latest
 .pure-g
 	.pure-u-1-3
-		.ui.button hehehe
+		.pure-g
+			.pure-u-1-3
+				.ui.button hehehe
+			.pure-u-1-3
+				.ui.button hehehe
+			.pure-u-1-3
+				.ui.button hehehe
+		.pure-g
+			.pure-u-1-3
+				.ui.button hehehe
+			.pure-u-1-3
+				.ui.button hehehe
+			.pure-u-1-3
+				.ui.button hehehe
 	.pure-u-1-3
 		p hahhaha
 	.pure-u-1-3
