--- a/dionysus-client/yo/templates/home/course/first.jade
+++ b/dionysus-client/yo/templates/home/course/first.jade
@@ -4,8 +4,8 @@
       #slider
   .oneraw
     .col12
-      #topCategory
-      #subCategory
+      #topCats
+      #subCats
       #approach
   .oneraw
     #video.col12
