article summary page 80%

--- a/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
@@ -1,49 +1,23 @@
-.ui.centered.page.grid
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#slider
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#category
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#doc
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#video
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#blog
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#tag
-	.row
-		.sixteen.wide.moblie.fourteen.wide.tablet.fourteen.wide.computer.column
-			.ui.segment#latest
 .pure-g
-	.pure-u-1-3
-		.pure-g
-			.pure-u-1-3
-				.ui.button hehehe
-			.pure-u-1-3
-				.ui.button hehehe
-			.pure-u-1-3
-				.ui.button hehehe
-		.pure-g
-			.pure-u-1-3
-				.ui.button hehehe
-			.pure-u-1-3
-				.ui.button hehehe
-			.pure-u-1-3
-				.ui.button hehehe
-	.pure-u-1-3
-		p hahhaha
-	.pure-u-1-3
-		p xixixixi
+	.pure-u-1
+		#slider
 .pure-g
-	.pure-u-1-3
-		.ui.button hehehe
-	.pure-u-1-3
-		p hahhaha
-	.pure-u-1-3
-		p xixixixi
+	.pure-u-1
+		#category
+.pure-g
+	.pure-u-1
+		#doc
+.pure-g
+	.pure-u-1
+		#video
+.pure-g
+	.pure-u-1
+		#blog
+.pure-g
+	.pure-u-1
+		#tag
+.pure-g
+	.pure-u-1
+		#latest
+
+
