--- a/dionysus-client/yo/templates/home/article/listPage/articleList.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleList.jade
@@ -1,7 +1,5 @@
-.ui.two.column.divided.stackable.grid
-	.twelve.wide.center.aligned.column
-		.left.aligned.segment
-			p 心理文章 － 亲子关系
+.ui.two.column.divided.stackable.equal.height.grid
+	.twelve.wide.column
 		.segment#list
 	.four.wide.column
 		.segment#tag
