--- a/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
@@ -2,10 +2,10 @@
 	h3 {{items.[0].type}} - {{items.[0].category.name}}
 {{#each items}}
 .pure-g.article-list-item
-	.pure-u-md-1-2.pure-u-lg-1-2
+	.pure-u-1-2
 		.ui.basic.segment
 			img.pure-img(src="/public/images/slide1.png")
-	.pure-u-md-1-2.pure-u-lg-1-2
+	.pure-u-1-2
 		.ui.basic.segment
 			h4 {{title}}
 			p {{summary}}
