--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -14,6 +14,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/styles/pagination.css")
     link(rel="stylesheet", href="/styles/jquery.fullPage.css")
     link(rel="stylesheet", href="/bower_components/pure/pure.css")
+    link(rel="stylesheet", href="/bower_components/pure/grids-responsive.css")
     link(rel="stylesheet", href="/styles/onepcssgrid/onepcssgrid.css")
     // endbuild
 
@@ -55,7 +56,6 @@ html(class="no-js")
   script(src="/scripts/modules/profile.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
-  script(src="/scripts/modules/course.js")
 
   // endbuild
 
