--- a/dionysus-client/yo/templates/home/article/listPage/articleList.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleList.jade
@@ -1,6 +1,6 @@
 .ui.two.column.divided.stackable.equal.height.grid
-	.twelve.wide.column
-		.segment#list
-	.four.wide.column
-		.segment#tag
-		.segment#latest
+	.ten.wide.column
+		#list
+	.six.wide.column
+		#latest.article-right-content
+		#tag.article-right-content
