--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,19 +1,51 @@
-.ui.three.column.divided.center.aligned.stackable.grid
-  .ui.equal.height.row
-    .column
-      p 联系方式：1234
-      p 
-        a 关于我们
-      p 
-        a 备案号:1234
-      p &copy; 2015 版权申明
-    .column
-      p
-        a 心理服务小站
-      p
-        a 心理学院
-    .column
-      p
-        a 客服 800-123-12
-      p
-        a 投诉与建议
+.pure-g
+  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
+    .ui.header
+      h4 心理圈
+    .ui.list
+      .item
+        a 汇心心理服务小站
+      .item
+        a 汇心心理学院
+      .item
+        a 第三方机构
+  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
+    .ui.header
+      h4 友情链接
+    .ui.list
+      .item
+        a 友情链接1
+      .item
+        a 友情链接2
+      .item
+        a 友情链接3
+      .item
+        a 友情链接4
+  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
+    .ui.header
+      h4 关于汇心
+    .ui.list
+      .item
+        a 汇心心理品牌
+      .item
+        a 汇心大事记
+      .item
+        a 资质与荣誉
+      .item
+        a 版权声明
+      .item
+        a 联系我们
+  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
+    .ui.header
+      h4 加入汇心
+    .ui.list
+      .item
+        a 企业报班
+      .item
+        a 学校报班
+      .item
+        a 个人
+.pure-g
+  .pure-u-1
+    .ui.divider
+    .address 地址
