--- a/dionysus-client/yo/templates/home/header/login.jade
+++ b/dionysus-client/yo/templates/home/header/login.jade
@@ -1,9 +1,9 @@
-.pure-g
-	.pure-u-1-5
+.pure-g.logo-bar
+	.pure-u-2-5
 		a.logo.pure-menu-heading
-			p LOGO
-	.pure-u-4-5.login-menu
-		.pure-menu.pure-menu-horizontal
+			img.pure-img(src="/public/images/logo.jpg")
+	.pure-u-3-5
+		.pure-menu.pure-menu-horizontal.login-menu
 			ul.pure-menu-list
 				li.pure-menu-item
 					a.pure-menu-link(href="/profile/{{ id }}") 用户面板
@@ -13,20 +13,21 @@
 					a#adminlink.pure-menu-link(href="#") 管理员
 				li.pure-menu-item
 					a.pure-menu-link(href="/logout") 退出
-.home-menu.pure-menu.pure-menu-horizontal
-	ul.pure-menu-list
-		li.pure-menu-item
-			a.absolute-center.pure-menu-link(href="/site") 首页
-		li.pure-menu-item
-			a.pure-menu-link(href="/articles") 心理知识
-		li.pure-menu-item
-			a.pure-menu-link(href="/consultants") 心理咨询
-		li.pure-menu-item
-			a.pure-menu-link(href="/courses") 心理课程
-		li.pure-menu-item
-			a.pure-menu-link(href="/psychtestsuites") 心理测试
-		li.pure-menu-item
-			a.pure-menu-link(href="#") 心理fm
-		li.pure-menu-item
-			a.pure-menu-link(href="#") 其他
+.home-menu-bar
+	.home-menu.pure-menu.pure-menu-horizontal
+		ul.pure-menu-list
+			li.pure-menu-item
+				a.absolute-center.pure-menu-link(href="/site") 首页
+			li.pure-menu-item
+				a.pure-menu-link(href="/articles") 心理知识
+			li.pure-menu-item
+				a.pure-menu-link(href="/consultants") 心理咨询
+			li.pure-menu-item
+				a.pure-menu-link(href="/courses") 心理课程
+			li.pure-menu-item
+				a.pure-menu-link(href="/psychtestsuites") 心理测试
+			li.pure-menu-item
+				a.pure-menu-link(href="#") 心理FM
+			li.pure-menu-item
+				a.pure-menu-link(href="#") 其他
 
