--- a/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleHome.jade
@@ -1,23 +1,24 @@
-.pure-g
+.article-home-top
+	.pure-g
+		.pure-u-1
+			#slider
+	.pure-g
+		.pure-u-1
+			#category
+	.pure-g
+		.pure-u-1
+			#doc
+	.pure-g
+		.pure-u-1
+			#video
+	.pure-g
+		.pure-u-1
+			#blog
+.pure-g.article-home-bottom
 	.pure-u-1
-		#slider
-.pure-g
-	.pure-u-1
-		#category
-.pure-g
-	.pure-u-1
-		#doc
-.pure-g
-	.pure-u-1
-		#video
-.pure-g
-	.pure-u-1
-		#blog
-.pure-g
-	.pure-u-1
-		#tag
-.pure-g
-	.pure-u-1
-		#latest
-
-
+		.article-home-bottom-content
+			.pure-g
+				.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
+					#tag
+				.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2		
+					#latest
