--- a/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
@@ -1,14 +1,14 @@
 .pure-g
-	.pure-u-1-2
+	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 		a(href="/articles/{{items.[0].id}}")
 			img(src="{{items.[0].cover}}")
-	.pure-u-1-2
+	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 		.pure-g
-			.pure-u-1.article-more
+			.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2.article-more
 				a(href="/articles/list/cat{{items.[0].category.id}}/typeDOC")
 					h2 更多视频
 		.pure-g
-			.pure-u-1-2
+			.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 				.ui.list
 					.item
 						a(href="/articles/{{items.[0].id}}") {{items.[0].title}}
@@ -16,7 +16,7 @@
 						a(href="/articles/{{items.[1].id}}") {{items.[1].title}}
 					.item
 						a(href="/articles/{{items.[2].id}}") {{items.[2].title}}
-			.pure-u-1-2
+			.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 				.ui.list
 					.item
 						a(href="/articles/{{items.[3].id}}") {{items.[3].title}}
