--- a/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
@@ -1,14 +1,20 @@
 .pure-g
-	h3 {{items.[0].type}} - {{items.[0].category.name}}
+	.pure-u-1
+		.ui.huge.breadcrumb
+			a {{items.[0].type}}
+			i.right.chevron.icon.divider
+			a {{items.[0].category.name}}
 {{#each items}}
 .pure-g.article-list-item
-	.pure-u-1-2
+	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
+		img.pure-img(src="/public/images/slide1.png")
+	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 		.ui.basic.segment
-			img.pure-img(src="/public/images/slide1.png")
-	.pure-u-1-2
-		.ui.basic.segment
-			h4 {{title}}
-			p {{summary}}
-			p 作者： 来源： 浏览数：
+			.article-list-summary
+				.ui.header
+					a(href="/articles/{{id}}")
+						h4 {{title}}
+				p {{summary}}
+				p 作者： 来源： 浏览数：
 {{/each}}
 div#paging.paging
