--- a/dionysus-client/yo/templates/home/article/homePage/articleSlider.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleSlider.jade
@@ -2,5 +2,5 @@ ul.slides
   {{#each items}}
   li
     a(href="/articles/{{id}}")
-      img(src="/public/images/slide1.png")
+      img(src="/public/images/slidex.jpg")
   {{/each}}
