--- a/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
@@ -7,7 +7,7 @@
 {{#each items}}
 .pure-g.article-list-item
 	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
-		img.pure-img(src="/public/images/slide1.png")
+		img.pure-img(src="{{cover}}")
 	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
 		.ui.basic.segment
 			.article-list-summary
