add realname in profile

--- a/dionysus-client/yo/templates/home/profile/personal.jade
+++ b/dionysus-client/yo/templates/home/profile/personal.jade
@@ -7,6 +7,11 @@ form.ui.form
     .ui.left.icon.input
       input(type="text", name="email", value="{{ email }}", required)
       i.mail.icon
+  .field
+    label 真实姓名：    
+    .ui.left.icon.input
+      input(type="text", name="realName", value="{{ realName }}", required)
+      i.user.icon
   .two.fields
     .field
       label 性别：   
