consultant appointment home and detail page

--- a/dionysus-client/yo/templates/home/consultant/consultantHome.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantHome.jade
@@ -1,6 +1,6 @@
 .pure-g
 	.pure-u-1.pure-u-md-11-24.pure-u-lg-11-24.expertise
-		#expertise.ui.segment
+		#expertise.ui.basic.segment
 			h3 在线心理咨询
 			p 咨询话题：
 				{{#each expertises}}
