--- a/dionysus-client/yo/templates/home/profile/appointments.jade
+++ b/dionysus-client/yo/templates/home/profile/appointments.jade
@@ -7,5 +7,5 @@
       .description 
         .label 时间 {{ date }}
         .label 状态 {{ state }}
-        a(href="{{ item.consultant_qqAddress }}") QQ聊天
+        a(href="{{ consultant_qqAddress }}") QQ聊天
   {{/each}}
