course home UI finished

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -56,6 +56,7 @@ html(class="no-js")
   script(src="/scripts/modules/profile.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
+  script(src="/scripts/modules/course/home.js")
 
   // endbuild
 
