--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -1,4 +1,73 @@
 #fullPage
   #first.section
+    .ui.grid
+      .row.centered
+        .twelve.wide.column
+          #slider.flexslider
+            ul.slides
+              |{{#each slider}}
+              li
+                a(href="/courses/{{id}}")
+                  |<img src="/public/images/slidex.jpg">
+              |{{/each}}
+      .row.centered
+        .twelve.wide.column
+          #topCats
+            |{{#each top}}
+            .top.ui.small.basic.button(id="{{id}}") {{name}}
+            |{{/each}}
+          #subCats(style="margin-top:10px;")
+            |{{#each sub}}
+            .sub.ui.small.basic.button(id="{{id}}") {{name}}
+            |{{/each}}
+          #approach(style="margin-top:10px;")
+            |{{#each approach}}
+            a.approach.ui.small.basic.button(href="{{href}}") {{name}}
+            |{{/each}}
+      #videos.twelve.wide.column.centered(style="margin-top:10px;")
+        .ui.three.column.grid
+          |{{#each videos}}
+          .column
+            .ui.basic.segment
+              img.ui.fluid.image(src="/static/img/1.jpg")
+              .link
+                a {{title}}
+          |{{/each}}
+      .two.column.centered.row
+        .centered.column
+          #pagenation-video(style="text-align:center;")
   #second.section
+    .ui.grid
+      .twelve.wide.column.centered
+        img(src="/public/images/slidex.jpg")
+      #room.twelve.wide.column.centered
+        .ui.four.column.grid
+          |{{#each room}}
+          .column
+            .ui.basic.segment
+              img.ui.fluid.image(src="/static/img/1.jpg")
+              .link
+                a {{title}}
+              .reg(style="text-align:center;")
+                .ui.purple.tiny.basic.button 加入
+          |{{/each}}
+      .two.column.centered.row
+        .centered.column
+          #pagenation-room(style="text-align:center;")
+      #offline.twelve.wide.centered.column
+        .ui.two.column.grid
+          .column
+            .ui.basic.segment
+              img.ui.fluid.image(src="/public/images/slidex.jpg")
+          .column
+            .ui.basic.segment
+              .ui.grid
+                |{{#each offline}}
+                .two.column.row
+                  .column
+                    a {{title}}
+                    p {{description}}
+                  .column
+                    a.ui.basic.tiny.purple.button 加入
+                |{{/each}}
 
