--- a/dionysus-client/yo/templates/home/profile/appointments.jade
+++ b/dionysus-client/yo/templates/home/profile/appointments.jade
@@ -1,11 +1,25 @@
-.ui.celled.list
-  {{#each items}}
-  .item
-    img.ui.avatar.image(src="{{ consultant_avatar }}")
-    .content
-      .header {{ consultant_name }}
-      .description 
-        .label 时间 {{ date }}
-        .label 状态 {{ state }}
-        a(href="{{ consultant_qqAddress }}") QQ聊天
-  {{/each}}
+table.ui.stackable.table
+  thead
+    tr
+      th 咨询师
+      th 咨询对象
+      th 方式
+      th 日期
+      th 状态
+      th 动作
+  tbody
+    {{#each items}}
+    tr
+      td {{consultant.realName}}
+      td {{name}}
+      td {{approach}}
+      td {{date}}
+      td
+        a(class="ui {{state_color}} label") {{state}} 
+      {{#if approach_online}}
+      td
+        a.ui.basic.green.button(href="{{consultant.qqAddress}}") 开始会话
+      {{else}}
+      td 请等待通知
+      {{/if}}
+    {{/each}}
