update consultant management jade

--- a/dionysus-client/yo/templates/admin/consultants/consultantexpertiselistitem.jade
+++ b/dionysus-client/yo/templates/admin/consultants/consultantexpertiselistitem.jade
@@ -3,7 +3,4 @@
   .meta
     span  邮箱: {{email}}
   .extra
-    .ui.left.floated.tiny.vertical.animated.red.button.delete
-      .hidden.content 添加特长
-      .visible.content
-        i.large.trash.icon
+    .ui.small.red.save.button 添加特长
