--- a/dionysus-client/yo/templates/admin/consultants/expertiselistitem.jade
+++ b/dionysus-client/yo/templates/admin/consultants/expertiselistitem.jade
@@ -1,7 +1,4 @@
 .content
   a.header{{name}}
   .extra
-    .ui.left.floated.tiny.vertical.animated.red.button.delete
-      .hidden.content 添加此特长
-      .visible.content
-        i.large.trash.icon
+    .ui.small.green.save.button 添加此特长
