--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -52,7 +52,7 @@
               .link
                 a {{title}}
               .reg(style="text-align:center;")
-                .ui.purple.tiny.basic.button 加入
+                a.ui.purple.tiny.basic.button 加入
           |{{/each}}
       .two.column.centered.row
         .centered.column
