--- a/dionysus-client/yo/templates/home/course/room.jade
+++ b/dionysus-client/yo/templates/home/course/room.jade
@@ -6,5 +6,5 @@
       .link(style="text-align:center;")
         a {{title}}
       .reg(style="text-align:center;")
-        .ui.tiny.basic.button 加入
+        a.ui.tiny.basic.button 加入
   |{{/each}}
